fix(onboarding): style paragraphs and articles to have proper spacing

--- a/src/pages/Onboarding/styles.css
+++ b/src/pages/Onboarding/styles.css
@@ -13,7 +13,12 @@
   -webkit-text-fill-color: gray;
 }
 
-.onboarding-page .paragraph {
+.onboarding-page article {
   margin-block-end: 25px;
   margin-block-start: 25px;
+}
+
+.onboarding-page p {
+  margin-block-end: 10px;
+  margin-block-start: 10px;
 }
